--- a/Mpolice/app/src/main/AndroidManifest.xml
+++ b/Mpolice/app/src/main/AndroidManifest.xml
@@ -58,12 +58,6 @@
             android:name=".SplashScreen"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -100,22 +94,34 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Search" >
+        <activity android:name=".Search">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
 
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
 
-        <activity android:name=".LogIn" >
-
-        </activity>
-
-
-
-        <activity android:name=".AllViolations" >
+        <activity
+            android:name=".MainSearch"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+
+        <activity android:name=".LogIn" >
+        </activity>
+
+
+
+        <activity android:name=".AllViolations" >
         </activity>
         <activity android:name=".CarDetails" >
         </activity>
