--- a/Mpolice/app/src/main/AndroidManifest.xml
+++ b/Mpolice/app/src/main/AndroidManifest.xml
@@ -27,8 +27,20 @@
 
     <uses-permission android:name="com.example.ibra.newproject.permission.C2D_MESSAGE" />
 
+
+
+    <!--<application>-->
+        <!--<provider android:name=".MySuggestionProvider"-->
+            <!--android:authorities="com.example.MySuggestionProvider" />-->
+        <!--...-->
+    <!--</application>-->
+
     <application
-        android:name=".AppConfig"
+
+
+
+
+    android:name=".AppConfig"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
