--- a/Mpolice/app/src/main/AndroidManifest.xml
+++ b/Mpolice/app/src/main/AndroidManifest.xml
@@ -70,6 +70,7 @@
             android:name=".SplashScreen"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
+
         </activity>
 
         <service android:name="com.parse.PushService" />
@@ -89,23 +90,22 @@
         <activity
             android:name=".Report"
             android:theme="@style/AppTheme.NoActionBar" >
-
         </activity>
         <activity
             android:name=".SearchPlate"
-            android:label="@string/title_activity_search_plate"
+            android:label="@string/search_number_plate"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".Search">
+        <activity android:name=".Search"
+            android:label="@string/title_activity_search_plate">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.DEFAULT" />
-                    <action android:name="android.intent.action.MAIN" />
-                    <category android:name="android.intent.category.LAUNCHER" />
+
                 </intent-filter>
 
             <meta-data android:name="android.app.searchable"
@@ -114,18 +114,19 @@
 
         <activity
             android:name=".MainSearch"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_search_plate"
             android:theme="@style/AppTheme.NoActionBar">
-
         </activity>
-
 
         <activity android:name=".LogIn" >
         </activity>
 
-
-
-        <activity android:name=".AllViolations" >
+        <activity android:name=".AllViolations"
+            android:label="@string/violations_list">
+            <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
+               <category android:name="android.intent.category.LAUNCHER" />
+           </intent-filter>
         </activity>
         <activity android:name=".CarDetails" >
         </activity>
